# ECOM-NER

./: .gitignore  README.md  aggregate_titles.py  prep_corpus.ipynb  pyproject.toml
__MACOSX/: ._config.json  ._data
configs/: global_pointer_baseline.json
project-1/processors/: ner_seq.py
project-1/scripts/: run_ner_crf.sh
scripts/: build_corpus.py  continue_pretrain.py  evaluate_by_label.py  predict.py  prepare_data.py  train.py
scripts/configs/: continue_pretrain_mlm.json  global_pointer_baseline.json  global_pointer_pretrain.json
src/ecom_ner/: __init__.py  data.py  io.py  labels.py  metrics.py  modeling.py  train_utils.py
utils/: data_utils.py
