[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecom-ner"
version = "0.1.0"
description = "A clean Chinese e-commerce NER pipeline based on merged GAIIC and ecommerce datasets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "torch>=2.1",
  "tqdm>=4.66",
  "transformers>=4.40"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
